[tool.poetry]
name = "starlette-thing"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
starlette = "^0.13.8"
uvicorn = "^0.11.8"
databases = {extras = ["postgresql"], version = "^0.3.2"}
sqlalchemy = "^1.3.19"
alembic = "^1.4.2"
pydantic = "^1.6.1"

[tool.poetry.dev-dependencies]
sqlalchemy-stubs = "^0.3"
mypy = "^0.782"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
